# object_detector

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: multi_object_detector.launch  object_detector.launch
rviz_cfg/: object_detector.rviz
scripts/: .object_detector.py.swp  multi_object_detector.py  object_detector.py
